[package]
name = "rundler-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-contracts = { path = "../contracts" }
rundler-provider = { path = "../provider" }
rundler-sim = { path = "../sim" }
rundler-task = { path = "../task" }
rundler-types = { path = "../types" }
rundler-utils = { path = "../utils" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true

anyhow.workspace = true
async-stream = "0.3.5"
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
metrics.workspace = true
parking_lot = "0.12.3"
prost.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1.12", features = ["sync"] }
tokio-util.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true
url.workspace = true

mockall = {workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
rundler-sim = { path = "../sim", features = ["test-utils"] }
rundler-provider = { path = "../provider", features = ["test-utils"] }

[build-dependencies]
tonic-build.workspace = true
