[package]
name = "rundler-pool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-contracts.workspace = true
rundler-provider.workspace = true
rundler-sim.workspace = true
rundler-task.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true

alloy-primitives.workspace = true
alloy-sol-types.workspace = true

anyhow.workspace = true
async-stream = "0.3.5"
async-trait.workspace = true
futures.workspace = true
futures-util.workspace = true
itertools.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
parking_lot = "0.12.3"
prost.workspace = true
tokio.workspace = true
tokio-stream = { version = "0.1.12", features = ["sync"] }
tonic.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-network-primitives.workspace = true
alloy-serde.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
mockall.workspace = true
reth-tasks.workspace = true
rundler-provider = { workspace = true, features = ["test-utils"] }
rundler-sim = { workspace = true, features = ["test-utils"] }
rundler-types = { workspace = true, features = ["test-utils"] }
serde_json.workspace = true

[build-dependencies]
tonic-build.workspace = true
