[package]
name = "rundler-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-bindings-fastlz.workspace = true
rundler-contracts.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider = { workspace = true, features = ["debug-api"] }
alloy-rlp.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true

reth-tasks = { workspace = true, features = ["rayon"] }

anyhow.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
const-hex.workspace = true
futures-util.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

mockall = { workspace = true, optional = true }

[features]
test-utils = ["mockall"]

[dev-dependencies]
alloy-node-bindings = "0.4.2"
alloy-provider = { workspace = true, features = ["debug-api", "anvil-node"] }
alloy-sol-macro.workspace = true
rundler-provider = { workspace = true, features = ["test-utils"] }
tokio.workspace = true
