[package]
name = "rundler-provider"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-json-rpc.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider = { workspace = true, features = ["debug-api"] }
alloy-rlp.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-rpc-types-trace.workspace = true
alloy-serde.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true
alloy-transport-http.workspace = true

anyhow.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
futures-util.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
mockall = { workspace = true, optional = true }
pin-project.workspace = true
rand.workspace = true
reqwest.workspace = true
reth-tasks = { workspace = true, features = ["rayon"] }
rundler-bindings-fastlz.workspace = true
rundler-contracts.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tracing.workspace = true
url.workspace = true

[features]
test-utils = ["mockall"]

[dev-dependencies]
alloy-provider = { workspace = true, features = ["debug-api", "anvil-node"] }
tiny_http.workspace = true
tokio.workspace = true
