[package]
name = "rundler-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-contract.workspace = true
alloy-json-rpc.workspace = true
alloy-primitives.workspace = true

anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
http.workspace = true
jsonrpsee = { workspace = true, features = ["client", "macros", "server"] }
metrics.workspace = true
metrics-derive.workspace = true
rundler-provider.workspace = true
rundler-sim.workspace = true
rundler-task.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
rundler-provider = { workspace = true, features = ["test-utils"] }
rundler-sim = { workspace = true, features = ["test-utils"] }
rundler-types = { workspace = true, features = ["test-utils"] }
