[package]
name = "rundler-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-contracts = { path = "../contracts" }
rundler-provider = { path = "../provider" }
rundler-types = { path = "../types" }
rundler-utils = { path = "../utils" }

alloy-primitives.workspace = true
alloy-sol-types.workspace = true

anyhow.workspace = true
arrayvec = "0.7.6"
async-trait.workspace = true
auto_impl.workspace = true
futures-util.workspace = true
indexmap = "2.4.0"
parse-display.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.9.0"
rand.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
url.workspace = true
strum.workspace = true

mockall = {workspace = true, optional = true }

[dev-dependencies]
mockall.workspace = true
rundler-provider = { path = "../provider", features = ["test-utils"] }
alloy-primitives = { workspace = true, features = ["rand"]}

[features]
test-utils = [ "mockall" ]
