[package]
name = "rundler-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-contracts.workspace = true
rundler-provider.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

anyhow.workspace = true
arrayvec = "0.7.6"
async-trait.workspace = true
auto_impl.workspace = true
futures-util.workspace = true
indexmap = "2.4.0"
parse-display.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.9.0"
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }
tracing.workspace = true
url.workspace = true

mockall = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
mockall.workspace = true
rundler-provider = { workspace = true, features = ["test-utils"] }
rundler-sim = { workspace = true, features = ["test-utils"] }
rundler-types = { workspace = true, features = ["test-utils"] }

[features]
test-utils = ["mockall"]
