[package]
name = "rundler-task"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rundler-provider = { path = "../provider" }
rundler-utils = { path = "../utils" }

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
ethers.workspace = true
pin-project.workspace = true
metrics.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
thiserror.workspace = true
tracing.workspace = true
