[package]
name = "rundler-task"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rundler-provider.workspace = true
rundler-types.workspace = true
rundler-utils.workspace = true

alloy-primitives.workspace = true

anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
metrics.workspace = true
pin-project.workspace = true
reth-tasks.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
