
[dependencies]

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true

anyhow.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
chrono = "0.4.38"
futures-util.workspace = true
metrics.workspace = true
metrics-derive.workspace = true

mockall = { workspace = true, optional = true }
num_enum = "0.7.3"
parse-display.workspace = true
rundler-contracts.workspace = true
rundler-utils.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["rand"] }
serde_json.workspace = true
[package]
name = "rundler-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
test-utils = ["mockall"]
